# application_challenge

./: .gitignore  README.md  exploration.ipynb  pyproject.toml
data/: lor_bezirksregionen_2021.csv
