[tool.poetry]
name = "polyteia challenge"
version = "0.1.0"
description = ""
authors = ["Adrian <adrian.moritz@mail.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
