[tool.poetry]
name = "polyteia challenge"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
pyspark = "^3.3.2"
seaborn = "^0.12.2"
pyarrow = {extras = ["sql"], version = "^11.0.0"}


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
